--- a/package.json
+++ b/package.json
@@ -27,9 +27,21 @@
     "url": "https://github.com/DavinaLeong/proj-mern-exp/issues"
   },
   "homepage": "https://github.com/DavinaLeong/proj-mern-exp#readme",
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "~5.3.1",
+    "bootstrap": "~4.1.3",
+    "datatables.net-bs4": "~1.10.19",
+    "datatables.net-responsive-bs4": "~2.2.3",
+    "jquery": "~3.3.1",
+    "parsleyjs": "~2.8.1"
+  },
   "dependencies": {
     "body-parser": "~1.18.3",
     "express": "~4.16.3",
-    "nodemon": "~1.18.4"
+    "nodemon": "~1.18.4",
+    "del": "~3.0.0",
+    "event-stream": "~3.3.6",
+    "gulp": "~3.9.1",
+    "gulp-debug": "~4.0.0"
   }
 }
