--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   },
   "dependencies": {
     "body-parser": "~1.18.3",
-    "express": "~4.16.3",
-    "nodemon": "~1.18.4",
     "del": "~3.0.0",
     "event-stream": "~3.3.6",
-    "gulp": "~3.9.1",
-    "gulp-debug": "~4.0.0"
+    "express": "~4.16.3",
+    "gulp": "~4.0.0",
+    "gulp-debug": "~4.0.0",
+    "mongoose": "~5.3.0",
+    "nodemon": "~1.18.4"
   }
 }
