--- a/package.json
+++ b/package.json
@@ -27,22 +27,30 @@
     "url": "https://github.com/DavinaLeong/proj-mern-exp/issues"
   },
   "homepage": "https://github.com/DavinaLeong/proj-mern-exp#readme",
-  "devDependencies": {
+  "dependencies": {
     "@fortawesome/fontawesome-free": "~5.3.1",
     "bootstrap": "~4.1.3",
     "datatables.net-bs4": "~1.10.19",
     "datatables.net-responsive-bs4": "~2.2.3",
     "jquery": "~3.3.1",
     "parsleyjs": "~2.8.1",
-    "prismjs": "~1.15.0"
+    "prismjs": "~1.15.0",
+    "webpack": "~4.20.2",
+    "webpack-cli": "~3.1.2",
+    "webpack-dev-server": "~3.1.9"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@babel/core": "~7.1.2",
+    "@babel/preset-env": "~7.1.0",
+    "babel-loader": "~8.0.4",
     "body-parser": "~1.18.3",
+    "clean-webpack-plugin": "~0.1.19",
     "del": "~3.0.0",
     "event-stream": "~3.3.6",
     "express": "~4.16.3",
     "gulp": "~4.0.0",
     "gulp-debug": "~4.0.0",
+    "html-webpack-plugin": "~3.2.0",
     "mongoose": "~5.3.0",
     "nodemon": "~1.18.4"
   }
